corrected some typo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-      hello this is my profiel <p>
+      hello this is my profile <p>
     <p> put ur name here <p>
   </body>
 </html>
